# Numerical-Pendulum

./: CMakeLists.txt  README.md  analytical_pendulum.c  analytical_pendulum.h  main.c  pendulum.c  pendulum.h  plots.ipynb  rk4.c  rk4.h
